agregue variables scss al proyecto

--- a/index.html
+++ b/index.html
@@ -86,49 +86,49 @@
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p1"> consectetur </span>adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p2">consectetur</span> adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p3"> consectetur</span> adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor. </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet, <span class="p4"> consectetur </span> adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p5">consectetur</span> adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p6">consectetur</span> adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet <span class="p7">consectetur</span> adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
                         <img src="./img/castillo-inflable1.jpg" alt="">
                         <h3>Lorem, ipsum dolor. </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
+                        <p>Lorem ipsum dolor sit amet, <span class="p8">consectetur</span> adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
         </section>
