agregue seo al proyecto

--- a/productos.html
+++ b/productos.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="keywords" content="castillos, inflables, sillones, juegos, cotillon">
+    <meta name="description" content="imagenes de productos y servicios para fiestas">
     <link rel="icon" href="./img/logonube1.png">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -18,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Productos</title>
+    <title>Galeria</title>
 </head>
 
 <body>
@@ -204,28 +207,28 @@
         </div>
         <section class="galeria">
             <div class="galeria-1">
-                <img src="./img/castillo3.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo3.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
         </section>
 
@@ -234,28 +237,28 @@
         </div>
         <section class="galeria">
             <div class="galeria-1">
-                <img src="./img/castillo3.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo3.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
         </section>
 
@@ -264,28 +267,28 @@
         </div>
         <section class="galeria">
             <div class="galeria-1">
-                <img src="./img/castillo3.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo3.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo6.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo6.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo-inflable1.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo5.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo5.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
             <div class="galeria-1">
-                <img src="./img/castillo4.jpg" class="galeria-img" alt="">
+                <img src="./img/castillo4.jpg" class="galeria-img" alt="imagenes de productos">
             </div>
         </section>
 
@@ -304,7 +307,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#"> <img src="./img/logonube1.png" alt=""></a>
+                    <a href="#"> <img src="./img/logonube1.png" alt="logo Nubelina"></a>
                 </figure>
             </div>
 
