--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nubelina</title>
+    <!-- SEO -->
+    <meta name="keywords" content="juegos, alquiler, inflables, fiestas, cumpleaños, diversion, infantil, castillos">
+    <meta name="description" content="alquiler de juegos y servicios para fiestas">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/logonube1.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Chicle&family=Fredoka+One&family=Luckiest+Guy&family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -17,6 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Nubelina</title>
 
 </head>
 
@@ -55,15 +58,15 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/carousel.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel.jpg" class="d-block w-100" alt="regalo">
 
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel3.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel3.jpg" class="d-block w-100" alt="metegol">
 
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/carousel2.jpg" class="d-block w-100" alt="...">
+                    <img src="./img/carousel2.jpg" class="d-block w-100" alt="castillo">
 
                 </div>
             </div>
@@ -84,49 +87,49 @@
             <div class="row-img">
                 <div class="column-img">
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p1"> consectetur </span>adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p2">consectetur</span> adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p3"> consectetur</span> adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor. </h3>
                         <p>Lorem ipsum dolor sit amet, <span class="p4"> consectetur </span> adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p5">consectetur</span> adipisicing elit. Mollitia, maiores. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p6">consectetur</span> adipisicing elit. Culpa, odio. ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor.</h3>
                         <p>Lorem ipsum dolor sit amet <span class="p7">consectetur</span> adipisicing elit. Fugiat, laborum! ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1000">
-                        <img src="./img/castillo-inflable1.jpg" alt="">
+                        <img src="./img/castillo-inflable1.jpg" alt="imagen de productos">
                         <h3>Lorem, ipsum dolor. </h3>
                         <p>Lorem ipsum dolor sit amet, <span class="p8">consectetur</span> adipisicing elit. Optio, consectetur? ipsum dolor sit amet consectetur adipisicing elit. Sint quod similique, voluptates sit eius eaque?</p>
                         <a href="#">Ver mas <i class="fas fa-angle-double-right"></i> </a>
@@ -139,7 +142,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#"> <img src="./img/logonube1.png" alt=""></a>
+                    <a href="#"> <img src="./img/logonube1.png" alt="logo nubelina"></a>
                 </figure>
             </div>
 
