--- a/promos.html
+++ b/promos.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="keywords" content="promociones, ofertas, hotsale">
+    <meta name="description" content="promociones de productos y servicios para fiestas">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/logonube1.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Chicle&family=Fredoka+One&family=Luckiest+Guy&family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -16,6 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="./css/style.css">
     <title>Promos</title>
 </head>
 
@@ -55,7 +59,7 @@
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <a href="#"> <img src="./img/logonube1.png" alt=""></a>
+                    <a href="#"> <img src="./img/logonube1.png" alt="logo nube"></a>
                 </figure>
             </div>
 
